# nao_whole_body_ik

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  example_main.cpp  package.xml
config/: database_leg_configs.txt  nao.srdf  nao.urdf
include/nao_whole_body_ik/: common_functions.h  database_generator.h  database_reader.h  nao_leg_kinematics.h  nao_whole_body_kinematics.h  whole_body_ik_wrapper.h
launch/: example.launch  generate_multifoot_db.launch  run.test
src/: database_generator.cpp  database_generator_node.cpp  database_reader.cpp  nao_leg_kinematics.cpp  nao_whole_body_kinematics.cpp  whole_body_ik_wrapper.cpp
test/: database_reader_test.cpp  database_reader_test.h  main_gtest.cpp  whole_body_ik_solver_test.cpp  whole_body_ik_solver_test.h
