<?xml version="1.0"?>
<package format="2">
  <name>nao_whole_body_ik</name>
  <version>0.0.0</version>
  <description>The nao_whole_body_ik package</description>

  <maintainer email="aliathar94@gmail.com">Ali Athar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
</package>
